[gd_scene load_steps=5 format=3 uid="uid://cmhkss0n5jkbh"]

[ext_resource type="Script" path="res://Floor/Tile/Tile.gd" id="1_bu18m"]
[ext_resource type="Texture2D" uid="uid://dnaa871wkh876" path="res://Floor/Tile/Tile Assets/TileBorder.png" id="2_qbxm0"]
[ext_resource type="Texture2D" uid="uid://damknff6j76td" path="res://Floor/Tile/Tile Assets/TileInteractable.png" id="3_7lyyo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64e2i"]
size = Vector2(30, 30)

[node name="Tile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1151.0
offset_bottom = -647.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bu18m")

[node name="TileColor" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0.145098, 0.0941176, 0.101961, 1)

[node name="Border" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = ExtResource("2_qbxm0")

[node name="Interactable" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("3_7lyyo")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_64e2i")

[connection signal="mouse_entered" from="Area2D" to="." method="mouseHovered"]
[connection signal="mouse_exited" from="Area2D" to="." method="mouseExited"]
